[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[lib]
path = "src/lib.rs"
name  = "zero2prod"


[[bin]]
# this is probably not needed, but lets make it explicit
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"