[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
#env_logger = "0.9"  #  It looks at the RUST_LOG environment variable to determine what logs should be printed and what logs should be filtered out.
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
#log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

[lib]
path = "src/lib.rs"
name  = "zero2prod"


[[bin]]
# this is probably not needed, but lets make it explicit
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
